--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Calculator"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="300">
+
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -20,8 +21,9 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <TextBox Grid.Row="1" Text="{Binding Process}" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
-                <TextBox Grid.Row="2" Text="{Binding Result, UpdateSourceTrigger=PropertyChanged}" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
+                <TextBox Grid.Row="1" Text="{Binding Process}" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Bottom" BorderThickness="0" />
+                <TextBox Grid.Row="2" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Bottom" Text="{Binding Result}"/>
+
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
@@ -93,7 +95,7 @@
                     <Button Grid.Row="11" Grid.Column="1" Content="+/-"/>
                     <Button Grid.Row="11" Grid.Column="3" Content="0" x:Name="btn0"/>
                     <Button Grid.Row="11" Grid.Column="5" Content="."/>
-                    <Button Grid.Row="11" Grid.Column="7" Content="="/>
+                    <Button Grid.Row="11" Grid.Column="7" Content="=" Command="{Binding CalculateCommand}"/>
                     
                 </Grid>
             </Border>
